# systemc_examples

./: CMakeLists.txt  README.md
cmake/: FindSystemC.cmake
src/: CMakeLists.txt  main.cpp
src/chapter_01/: CMakeLists.txt  adder.cpp
src/chapter_02/: CMakeLists.txt  basic_module.cpp
src/chapter_03/: CMakeLists.txt  datatypes.cpp
src/chapter_04/: CMakeLists.txt  main.cpp
src/example-basic/: CMakeLists.txt  component.cpp  component.h  global.h  memory.cpp  memory.h  payload_manager.cpp  payload_manager.h  processor.cpp  processor.h  randomizer.cpp  randomizer.h  top.cpp
test/: test.cpp
